добавлены мапперы, но требуют доработки
