# openapi.yaml
@@ -34,7 +34,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserDTO'
           description: OK
         '401':
           description: Unauthorized
@@ -150,7 +150,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Ad'
+                $ref: '#/components/schemas/AdDTO'
         '401':
           description: Unauthorized
   /ads/{id}/comments:
@@ -158,7 +158,7 @@ paths:
       tags:
         - Комментарии
       summary: 'Получение комментариев объявления'
-      operationId: getComments
+      operationId: getCommentDTOS
       parameters:
         - name: id
           in: path
@@ -201,7 +201,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Comment'
+                $ref: '#/components/schemas/CommentDTO'
         '401':
           description: Unauthorized
         '404':
@@ -275,7 +275,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Ad'
+                $ref: '#/components/schemas/AdDTO'
         '403':
           description: Forbidden
         '401':
@@ -339,7 +339,7 @@ paths:
           content:
             'application/json':
               schema:
-                $ref: '#/components/schemas/Comment'
+                $ref: '#/components/schemas/CommentDTO'
         '403':
           description: Forbidden
         '401':
@@ -593,7 +593,7 @@ components:
         results:
           type: array
           items:
-            $ref: '#/components/schemas/Ad'
+            $ref: '#/components/schemas/AdDTO'
     ExtendedAd:
       type: object
       properties:
@@ -636,4 +636,4 @@ components:
         results:
           type: array
           items:
-            $ref: '#/components/schemas/Comment'
+            $ref: '#/components/schemas/CommentDTO'
